src/test/ui/coherence/impl-foreign-for-foreign[foreign].stderr
error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/impl-foreign-for-foreign[foreign].rs:10:1
   |
LL | impl Remote1<Rc<i32>> for i32 {
   | ^^^^^----------------^^^^^---
   | |    |                    |
   | |    |                    `i32` is not defined in the current crate
   | |    `Rc` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/impl-foreign-for-foreign[foreign].rs:14:1
   |
LL | impl Remote1<Rc<Local>> for f64 {
   | ^^^^^------------------^^^^^---
   | |    |                      |
   | |    |                      `f64` is not defined in the current crate
   | |    `Rc` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/impl-foreign-for-foreign[foreign].rs:18:1
   |
LL | impl<T> Remote1<Rc<T>> for f32 {
   | ^^^^^^^^--------------^^^^^---
   | |       |                  |
   | |       |                  `f32` is not defined in the current crate
   | |       `Rc` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0117`.
